{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "gameplay",
            "id": "cd06d251-7210-410f-ac5a-c8393199d849",
            "actions": [
                {
                    "name": "attack",
                    "type": "Button",
                    "id": "485e2196-6a27-4fe3-a9da-744381a3b499",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "jump",
                    "type": "Button",
                    "id": "c6786b4f-9eb3-4cd8-8860-65635bc192b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "modechange",
                    "type": "Button",
                    "id": "57ccf2ce-7b56-4f56-91b5-0598ca879a7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "menu",
                    "type": "Button",
                    "id": "458931c4-6396-4945-97c4-c38b0e893ae3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "down",
                    "type": "Button",
                    "id": "968db628-9bee-42cf-b020-7cb456054317",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveleft",
                    "type": "Button",
                    "id": "cadfdfee-d132-4138-8add-30548612a806",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveright",
                    "type": "Button",
                    "id": "869e1407-443f-4185-8df4-437f72db3325",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9481b057-cce6-4c45-9641-8e1f568dd4a3",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a5265d56-b334-4d43-b384-2c20b5295e8d",
                    "path": "<Keyboard>/#(a)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c592d03-c0bb-44a0-b4a9-b3611392cbe0",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb0ce881-1f03-43ae-8e8e-35b612c4549a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fdf841c6-0067-4b07-ae5c-6410864af63b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "modechange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecace223-fc95-432a-bf87-458c0d52e0e2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "modechange",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eccf714f-20f4-421d-8c58-cedf1ec28476",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ca165807-79d3-4dd2-891a-73d0b1e776a7",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dc094c2-f9ce-4643-a5f6-85939354bd80",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c7f5b48-6e1b-408e-8987-6523990413fe",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "down",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61905332-6cb5-4c20-bdbc-5a8164015603",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveleft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac06e0ef-6f6b-4e41-be9b-fa4d7890f8e9",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveleft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f5ced3b-0a0e-400a-ad29-d3f53d2b1bec",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveright",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c06cf6ef-6fba-4faa-a823-288b4f055504",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "moveright",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}